--- a/package.json
+++ b/package.json
@@ -4,16 +4,30 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "budo index.js --live -- -t [babelify]",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "browserify": {
+    "transform": ["babelify"]
+  },
+  "babel": {
+    "presets": [
+      "es2015",
+      "react",
+      "babel-preset-es2015",
+      "babel-preset-react"
+    ]
+  },
   "devDependencies": {
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.1.18",
     "babelify": "^7.2.0",
     "browserify": "^12.0.1",
-    "budo": "^6.0.4"
+    "budo": "^6.0.4",
+    "react": "^0.14.3",
+    "react-dom": "^0.14.3"
   }
 }
